Fix handler management. Update examples.

--- a/examples/simple.html
+++ b/examples/simple.html
@@ -16,7 +16,7 @@
       Buy
     </button>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.2/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.js"></script>
     <script src="../angular-stripe-checkout.js"></script>
 
     <script>
