--- a/examples/custom.html
+++ b/examples/custom.html
@@ -15,8 +15,8 @@
       <button ng-click="ctrl.doCheckout()">Buy</button>
     </script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.2/angular.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-rc.2/angular-route.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.5/angular-route.js"></script>
     <script src="../angular-stripe-checkout.js"></script>
 
     <script>
@@ -62,12 +62,12 @@
           // reused as many times as you like.
           var handler = StripeCheckout.configure({
               name: "Custom Example",
-              token: function(token) {
+              token: function(token, args) {
                 $log.debug("Got stripe token: " + token.id);
               }
           });
 
-          this.doCheckout = function(token) {
+          this.doCheckout = function(token, args) {
             var options = {
               description: "Ten dollahs!",
               amount: 1000
@@ -78,11 +78,10 @@
             // in addition to the token callback (or you can just ignore
             // it if you like the default API).
             //
-            // The rejection callback doesn't work in IE6-7. This is a
-            // limitation of the Stripe API.
+            // The rejection callback doesn't work in IE6-7.
             handler.open(options)
-              .then(function(token) {
-                alert("Got Stripe token: " + token.id);
+              .then(function(result) {
+                alert("Got Stripe token: " + result[0].id);
               },function() {
                 alert("Stripe Checkout closed without making a sale :(");
               });
