--- a/examples/custom.html
+++ b/examples/custom.html
@@ -7,7 +7,7 @@
 
     <script type="text/ng-template" id="main.html">
       <h1>No Stripe Checkout here</h1>
-      <a href="#/buy">Go to buy page</a>
+      <a href="#!/buy">Go to buy page</a>
     </script>
 
     <script type="text/ng-template" id="buy.html">
@@ -15,8 +15,8 @@
       <button ng-click="ctrl.doCheckout()">Buy</button>
     </script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
     <script src="../angular-stripe-checkout.js"></script>
 
     <script>
